layouting and coloring page accent.

--- a/src/Adstacy/AppBundle/Resources/views/App/landing.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/landing.html.twig
@@ -1,5 +1,83 @@
 {% extends 'AdstacyAppBundle::layout.html.twig' %}
 
 {% block content %}
-  {{ form(form) }}
+  <style>
+    body {
+      background-color: #333;
+      padding-top: 50px;
+      margin-bottom: 0;
+    }
+  </style>
+  <section class="jumbotron">
+    <div class="main-container">
+      <h1 class="text-center">Welcome to Adstacy</h1>
+    </div>
+    {# {{ form(form) }} #}
+  </section>
+  <section class="main-section red clearfix">
+    <div class="main-container">
+      <div class="main-pic">
+        <img data-src="holder.js/300x300">
+      </div>
+      <div class="main-content">
+        <h1>Lorem ipsum dolor sit amet.</h1>
+        <p class="lead">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, voluptas a assumenda deserunt dicta laborum at dolor nihil omnis vitae corporis delectus repellendus cupiditate cum commodi? Eius, saepe, soluta ipsa obcaecati atque veniam magnam ex vel cupiditate velit. At, velit necessitatibus cum nisi ratione provident nam reiciendis suscipit. Perferendis, dignissimos!
+        </p>
+      </div>
+    </div>
+  </section>
+  <section class="main-section green clearfix">
+    <div class="main-container">
+      <div class="main-pic">
+        <img data-src="holder.js/300x300">
+      </div>
+      <div class="main-content">
+        <h1>Lorem ipsum dolor sit amet.</h1>
+        <p class="lead">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, voluptas a assumenda deserunt dicta laborum at dolor nihil omnis vitae corporis delectus repellendus cupiditate cum commodi? Eius, saepe, soluta ipsa obcaecati atque veniam magnam ex vel cupiditate velit. At, velit necessitatibus cum nisi ratione provident nam reiciendis suscipit. Perferendis, dignissimos!
+        </p>
+      </div>
+    </div>
+  </section>
+  <section class="main-section blue clearfix">
+    <div class="main-container">
+      <div class="main-pic">
+        <img data-src="holder.js/300x300">
+      </div>
+      <div class="main-content">
+        <h1>Lorem ipsum dolor sit amet.</h1>
+        <p class="lead">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, voluptas a assumenda deserunt dicta laborum at dolor nihil omnis vitae corporis delectus repellendus cupiditate cum commodi? Eius, saepe, soluta ipsa obcaecati atque veniam magnam ex vel cupiditate velit. At, velit necessitatibus cum nisi ratione provident nam reiciendis suscipit. Perferendis, dignissimos!
+        </p>
+      </div>
+    </div>
+  </section>
+  <section class="main-section yellow clearfix">
+    <div class="main-container">
+      <div class="main-pic">
+        <img data-src="holder.js/300x300">
+      </div>
+      <div class="main-content">
+        <h1>Lorem ipsum dolor sit amet.</h1>
+        <p class="lead">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, voluptas a assumenda deserunt dicta laborum at dolor nihil omnis vitae corporis delectus repellendus cupiditate cum commodi? Eius, saepe, soluta ipsa obcaecati atque veniam magnam ex vel cupiditate velit. At, velit necessitatibus cum nisi ratione provident nam reiciendis suscipit. Perferendis, dignissimos!
+        </p>
+      </div>
+    </div>
+  </section>
+  <section class="main-section purple clearfix">
+    <div class="main-container">
+      <div class="main-pic">
+        <img data-src="holder.js/300x300">
+      </div>
+      <div class="main-content">
+        <h1>Lorem ipsum dolor sit amet.</h1>
+        <p class="lead">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, voluptas a assumenda deserunt dicta laborum at dolor nihil omnis vitae corporis delectus repellendus cupiditate cum commodi? Eius, saepe, soluta ipsa obcaecati atque veniam magnam ex vel cupiditate velit. At, velit necessitatibus cum nisi ratione provident nam reiciendis suscipit. Perferendis, dignissimos!
+        </p>
+      </div>
+    </div>
+  </section>
+
 {% endblock %}
