--- a/src/Adstacy/AppBundle/Resources/views/App/landing.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/landing.html.twig
@@ -17,7 +17,7 @@
   <section class="main-section red clearfix">
     <div class="main-container">
       <div class="main-pic">
-        <img data-src="holder.js/300x300">
+        <img src="{{ asset('bundles/adstacyapp/img/ads.png') }}">
       </div>
       <div class="main-content">
         <h1>Lorem ipsum dolor sit amet.</h1>
@@ -30,7 +30,7 @@
   <section class="main-section green clearfix">
     <div class="main-container">
       <div class="main-pic">
-        <img data-src="holder.js/300x300">
+        <img src="{{ asset('bundles/adstacyapp/img/hash.png') }}">
       </div>
       <div class="main-content">
         <h1>Lorem ipsum dolor sit amet.</h1>
@@ -43,7 +43,7 @@
   <section class="main-section blue clearfix">
     <div class="main-container">
       <div class="main-pic">
-        <img data-src="holder.js/300x300">
+        <img src="{{ asset('bundles/adstacyapp/img/bullhorn.png') }}">
       </div>
       <div class="main-content">
         <h1>Lorem ipsum dolor sit amet.</h1>
@@ -56,7 +56,7 @@
   <section class="main-section yellow clearfix">
     <div class="main-container">
       <div class="main-pic">
-        <img data-src="holder.js/300x300">
+        <img src="{{ asset('bundles/adstacyapp/img/search.png') }}">
       </div>
       <div class="main-content">
         <h1>Lorem ipsum dolor sit amet.</h1>
@@ -69,7 +69,7 @@
   <section class="main-section purple clearfix">
     <div class="main-container">
       <div class="main-pic">
-        <img data-src="holder.js/300x300">
+        <img src="{{ asset('bundles/adstacyapp/img/share.png') }}">
       </div>
       <div class="main-content">
         <h1>Lorem ipsum dolor sit amet.</h1>
