--- a/src/Adstacy/AppBundle/Resources/public/less/base/landing.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/landing.less
@@ -7,6 +7,14 @@
 .main-section {
   padding: 50px 0;
 
+  h1 {
+    font-size: 40px;
+  }
+
+  .lead {
+    font-size: 18px;
+  }
+
   .main-pic {
     width: 350px;
     text-align: center;
