--- a/src/Adstacy/UserBundle/Resources/views/Registration/register.html.twig
+++ b/src/Adstacy/UserBundle/Resources/views/Registration/register.html.twig
@@ -4,9 +4,9 @@
 
 {% block form_row %}
   <div class="form-group">
-    {{ form_label(form, label, {label_attr: {class: 'hide'} }) }}
-    {{ form_widget(form, {attr: {class: 'form-control input-lg'} }) }}
-    {{ form_errors(form, {attr: {class: 'alert alert-danger'} }) }}
+    {{ form_label(form, null, { label_attr: { class: 'hide' } }) }}
+    {{ form_widget(form, { attr: { class: 'form-control input-lg' } }) }}
+    {{ form_errors(form, { attr: { class: 'alert alert-danger' } }) }}
   </div>
 {% endblock %}
 
