change landing page jumbotron bg.

--- a/src/Adstacy/AppBundle/Resources/public/less/base/landing.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/landing.less
@@ -1,11 +1,11 @@
 .main-container {
   width: 1000px;
   margin: auto;
-  color: #fff;
 }
 
 .main-section {
   padding: 50px 0;
+  color: #fff;
 
   h1 {
     font-size: 40px;
@@ -58,4 +58,8 @@
 .purple {
   // background-color: #a002b9;
   background-color: #63459f;
+}
+
+.jumbotron {
+  color: #333;
 }
