Add explore route.

--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -20,7 +20,7 @@
           </button>
           <div id="browse-dropdown" class="dropdown-menu" role="menu">
             <ul id="browse-dropdown-menu" class="list-inline list-unstyled">
-              <li><a href="{{ path('homepage') }}" title="Explore"><span class="icon-home"></span>&nbsp; Explore</a></li>
+              <li><a href="{{ path('adstacy_app_explore') }}" title="Explore"><span class="icon-home"></span>&nbsp; Explore</a></li>
               <li><a href="{{ path('adstacy_app_stream') }}"><span class="icon-rss"></span>&nbsp; {{"stream"|trans}}</a></li>
               <li><a href="{{ path('adstacy_app_trending') }}" title="Trending"><span class="icon-rocket"></span>&nbsp; Trending</a></li>
             </ul>
