change section message.

--- a/src/Adstacy/AppBundle/Resources/views/App/landing.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/landing.html.twig
@@ -41,9 +41,10 @@
         <img src="{{ asset('bundles/adstacyapp/img/ads.png') }}">
       </div>
       <div class="main-content">
-        <h1>Lorem ipsum dolor sit amet.</h1>
+        <h1>Hemat. Cepat. Tepat.</h1>
         <p class="lead">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, voluptas a assumenda deserunt dicta laborum at dolor nihil omnis vitae corporis delectus repellendus cupiditate cum commodi? Eius, saepe, soluta ipsa obcaecati atque veniam magnam ex vel cupiditate velit. At, velit necessitatibus cum nisi ratione provident nam reiciendis suscipit. Perferendis, dignissimos!
+          Iklan dikonsumsi dan dipromosikan oleh konsumen sendiri. Semakin besar
+          komunitas anda, semakin cepat dan besar pasar Anda, dan Gratis.
         </p>
       </div>
     </div>
@@ -54,9 +55,10 @@
         <img src="{{ asset('bundles/adstacyapp/img/hash.png') }}">
       </div>
       <div class="main-content">
-        <h1>Lorem ipsum dolor sit amet.</h1>
+        <h1>Memanfaatkan Hashtag.</h1>
         <p class="lead">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, voluptas a assumenda deserunt dicta laborum at dolor nihil omnis vitae corporis delectus repellendus cupiditate cum commodi? Eius, saepe, soluta ipsa obcaecati atque veniam magnam ex vel cupiditate velit. At, velit necessitatibus cum nisi ratione provident nam reiciendis suscipit. Perferendis, dignissimos!
+          Untuk menjelaskan isi lengkap dari iklan, misalnya jenis iklan, lokasi,
+          merek, dan lainnya.
         </p>
       </div>
     </div>
@@ -67,9 +69,10 @@
         <img src="{{ asset('bundles/adstacyapp/img/bullhorn.png') }}">
       </div>
       <div class="main-content">
-        <h1>Lorem ipsum dolor sit amet.</h1>
+        <h1>Cara Baru Menikmati Iklan.</h1>
         <p class="lead">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, voluptas a assumenda deserunt dicta laborum at dolor nihil omnis vitae corporis delectus repellendus cupiditate cum commodi? Eius, saepe, soluta ipsa obcaecati atque veniam magnam ex vel cupiditate velit. At, velit necessitatibus cum nisi ratione provident nam reiciendis suscipit. Perferendis, dignissimos!
+          Kini anda mampu beriklan dengan lebih menyenangkan dengan mempromosikan
+          lewat jaringan sosial.
         </p>
       </div>
     </div>
@@ -80,9 +83,10 @@
         <img src="{{ asset('bundles/adstacyapp/img/search.png') }}">
       </div>
       <div class="main-content">
-        <h1>Lorem ipsum dolor sit amet.</h1>
+        <h1>Temukan Apapun Kebutuhan Anda.</h1>
         <p class="lead">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, voluptas a assumenda deserunt dicta laborum at dolor nihil omnis vitae corporis delectus repellendus cupiditate cum commodi? Eius, saepe, soluta ipsa obcaecati atque veniam magnam ex vel cupiditate velit. At, velit necessitatibus cum nisi ratione provident nam reiciendis suscipit. Perferendis, dignissimos!
+          Banyaknya jenis iklan, seperti promosi, jual beli, event, hingga lowongan
+          pekerjaan membuat Adstacy sebagai satu-satunya pusat media pencarian yang terlengkap.
         </p>
       </div>
     </div>
@@ -93,9 +97,10 @@
         <img src="{{ asset('bundles/adstacyapp/img/share.png') }}">
       </div>
       <div class="main-content">
-        <h1>Lorem ipsum dolor sit amet.</h1>
+        <h1>Bagi dan Sebarkan Iklan Anda.</h1>
         <p class="lead">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, voluptas a assumenda deserunt dicta laborum at dolor nihil omnis vitae corporis delectus repellendus cupiditate cum commodi? Eius, saepe, soluta ipsa obcaecati atque veniam magnam ex vel cupiditate velit. At, velit necessitatibus cum nisi ratione provident nam reiciendis suscipit. Perferendis, dignissimos!
+          Sosialkan iklan anda kepada teman-teman anda dan bangunlah komunitas anda
+          di Adstacy.
         </p>
       </div>
     </div>
