--- a/src/Adstacy/AppBundle/Resources/views/App/landing.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/landing.html.twig
@@ -13,6 +13,7 @@
 {% block content %}
   <style>
     body {
+      background-color: #333;
       margin-bottom: 0;
     }
   </style>
@@ -21,6 +22,11 @@
       <h1 class="text-center">Welcome to Adstacy</h1>
     </div>
     <div class="panel panel-default" style="width: 300px; float: right; margin-top: 100px;">
+      <div class="panel-heading">
+        {% for owner in hwi_oauth_resource_owners() %}
+          <a class="btn btn-block btn-{{ owner }}" href="{{ hwi_oauth_login_url(owner) }}">Signup with {{ owner|trans({}, 'HWIOAuthBundle') }}</a>
+        {% endfor %}
+      </div>
       {{ form_start(form, {attr: {class: 'panel-body', role: 'form'} }) }}
         {{ form_errors(form) }}
 
@@ -35,13 +41,13 @@
       {{ form_end(form) }}
     </div>
   </section>
-  <section class="main-section red clearfix">
+  <section class="main-section clearfix">
     <div class="main-container">
       <div class="main-pic">
         <img src="{{ asset('bundles/adstacyapp/img/ads.png') }}">
       </div>
       <div class="main-content">
-        <h1>Hemat. Cepat. Tepat.</h1>
+        <h1>Cepat. Mudah. Gratis.</h1>
         <p class="lead">
           Iklan dikonsumsi dan dipromosikan oleh konsumen sendiri. Semakin besar
           komunitas anda, semakin cepat dan besar pasar Anda, dan Gratis.
@@ -49,7 +55,7 @@
       </div>
     </div>
   </section>
-  <section class="main-section green clearfix">
+  <section class="main-section clearfix">
     <div class="main-container">
       <div class="main-pic">
         <img src="{{ asset('bundles/adstacyapp/img/hash.png') }}">
@@ -63,7 +69,7 @@
       </div>
     </div>
   </section>
-  <section class="main-section blue clearfix">
+  <section class="main-section clearfix">
     <div class="main-container">
       <div class="main-pic">
         <img src="{{ asset('bundles/adstacyapp/img/bullhorn.png') }}">
@@ -77,7 +83,7 @@
       </div>
     </div>
   </section>
-  <section class="main-section yellow clearfix">
+  <section class="main-section clearfix">
     <div class="main-container">
       <div class="main-pic">
         <img src="{{ asset('bundles/adstacyapp/img/search.png') }}">
@@ -91,7 +97,7 @@
       </div>
     </div>
   </section>
-  <section class="main-section purple clearfix">
+  <section class="main-section clearfix">
     <div class="main-container">
       <div class="main-pic">
         <img src="{{ asset('bundles/adstacyapp/img/share.png') }}">
