--- a/src/Adstacy/AppBundle/Resources/views/App/landing.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/landing.html.twig
@@ -21,7 +21,7 @@
     <div class="main-container">
       <h1 class="text-center">{{"landing.welcome"|trans}}</h1>
     </div>
-    <div class="panel panel-default" style="width: 300px; float: right; margin-top: 100px;">
+    <div id="form-register-container" class="panel panel-default">
       <div class="panel-heading">
         {% for owner in hwi_oauth_resource_owners() %}
           <a class="btn btn-block btn-{{ owner }}" href="{{ hwi_oauth_login_url(owner) }}">Signup with {{ owner|trans({}, 'HWIOAuthBundle') }}</a>
