--- a/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
@@ -20,11 +20,18 @@
     <div class="ad-user-action btn-group">
       {% if app.user %}
         {% set promoted = app.user.hasPromote(ad) %}
-        <a href="{{ path('adstacy_app_ad_unpromote', {id: ad.id}) }}" class="btn btn-primary btn-promote unpromote {% if not promoted %}hide{% endif %}"><span aria-hidden="true" data-icon="&#xe007;"></span></a>
-        <a href="{{ path('adstacy_app_ad_promote', {id: ad.id}) }}" class="btn btn-default btn-promote promote {% if promoted %}hide{% endif %}"><span aria-hidden="true" data-icon="&#xe007;"></span></a>
+        <a href="{{ path('adstacy_app_ad_promote', {id: ad.id}) }}" class="btn btn-primary btn-promote promote {% if promoted %}hide{% endif %}" title="promote">
+          <span aria-hidden="true" class="icon-bullhorn"></span>
+        </a>
+        <a href="{{ path('adstacy_app_ad_unpromote', {id: ad.id}) }}" class="btn btn-success btn-promote unpromote {% if not promoted %}hide{% endif %}" title="unpromote">
+          <span aria-hidden="true" class="icon-bullhorn"></span>
+        </a>
       {% else %}
-        <a href="{{ path('adstacy_app_ad_promote', {id: ad.id}) }}" class="btn btn-default btn-promote"><span aria-hidden="true" data-icon="&#xe007;"></span></a>
+        <a href="{{ path('adstacy_app_ad_promote', {id: ad.id}) }}" class="btn btn-primary btn-promote" title="promote">
+          <span aria-hidden="true" class="icon-bullhorn"></span>
+        </a>
       {% endif %}
+
       <div class="btn-group">
         <a class="btn btn-default dropdown-toggle" data-toggle="dropdown">
           <span aria-hidden="true" class="icon-share"></span>
