layout landing page feature grid.

--- a/src/Adstacy/AppBundle/Resources/public/less/base/landing.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/landing.less
@@ -1,47 +1,55 @@
 .main-container {
   width: 1000px;
-  margin: auto;
+  margin: 0 auto;
+}
+
+#main-feature {
+  background-color: #fff;
+  border-bottom: 1px solid @border-color;
+  margin-bottom: 20px;
 }
 
 .main-section {
-  padding: 10px 0;
-  color: #333;
-  background-color: #fff;
+  width: 333px;
+  display: inline-block;
+  vertical-align: top;
+  padding: 20px;
+  color: @gray-dark;
+  border: solid @border-color;
+  border-width: 1px 0 0 1px;
+
+  &:nth-child(3n) {
+    border-right-width: 1px;
+  }
+
+  &:nth-child(3n+2) {
+    width: 334px;
+  }
 
   h1 {
-    font-size: 50px;
-    color: #b00;
+    font-size: 30px;
+    color: @brand-primary;
+    text-align: center;
   }
 
   .lead {
-    font-size: 20px;
+    font-size: 18px;
     color: @gray;
   }
 
   .main-pic {
-    width: 350px;
+    .img-responsive();
+    background-color: @brand-primary;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin: auto;
     text-align: center;
-    float: right;
 
-    img {
-      width: 250px;
-      height: 250px;
-    }
-  }
-
-  .main-content {
-    width: 650px;
-    padding: 0 25px;
-    float: right;
-    text-align: right;
-  }
-
-  &:nth-of-type(odd) {
-    .main-pic, .main-content {
-      float: left;
-    }
-    .main-content {
-      text-align: left;
+    span[class^="icon"] {
+      font-size: 50px;
+      line-height: 100px;
+      color: #fff;
     }
   }
 }
@@ -53,23 +61,15 @@
 }
 
 @media screen and (max-width: @screen-tablet) {
-  .main-container, .main-pic {
-    width: 100%;
+  .main-container, .main-section, .main-content {
+    width: 100% !important;
   }
+
   .main-section {
-    padding: 10px 20px;
-    .main-pic {
-      width: 100%;
-      text-align: center;
-    }
-    h1 {
-      text-align: center;
-    }
-    .lead {
-      text-align: left;
-    }
-    .main-content {
-      width: 100%;
+    border-left-width: 0;
+
+    &:nth-child(3n) {
+      border-right-width: 0;
     }
   }
   #form-register-container {
@@ -102,7 +102,7 @@
   background-color: #63459f;
 }
 
-.jumbotron {
+#main-title {
 
   h1 {
     color: #fff;
