Responsive form.less

--- a/src/Adstacy/AppBundle/Resources/public/less/base/form.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/form.less
@@ -94,3 +94,11 @@
     margin-left: 174px;
   }
 }
+
+@media screen and (max-width: @screen-tablet) {
+  #register-container, #login-container, #reset-password-container, #reset-verification-container {
+    width: 100%;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+}
