--- a/src/Adstacy/AppBundle/Resources/public/less/adstacy.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/adstacy.less
@@ -53,10 +53,11 @@
 // Custom theme
 @import "./mixins.less";
 @import "./utilities.less";
+@import "./overrides.less";
 
 @import "./base/layout.less";
-@import "./base/search.less";
-@import "./base/ad.less";
-@import "./base/form.less";
-@import "./user.less";
+@import "./module/image-preview.less";
+@import "./layout/search.less";
+@import "./layout/ad.less";
+@import "./layout/user.less";
 @import "./base/landing.less";
