--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -31,10 +31,6 @@ span.required {
   }
 }
 
-.select2-container {
-  min-width: 250px;
-}
-
 .follow-container {
   padding: 0 10px 10px;
 }
@@ -204,27 +200,6 @@ span.required {
   }
 }
 
-#error-page {
-  margin-top: 50px;
-  text-align: center;
-  color: @gray-dark;
-  h2 {
-    font-size: 6em;
-    margin-bottom: 30px;
-  }
-  h3 {
-    font-size: 2em;
-    margin-bottom: 50px;
-  }
-  a {
-    margin-right: 20px;
-    color: @brand-success;
-  }
-  a.btn {
-    color: #fff;
-  }
-}
-
 /** Hide header mobile components **/
 #create-ads-label {
   display: none;
@@ -309,6 +284,28 @@ span.required {
   border-color: #333;
 }
 
-#page {
-  width: 750px;
+#login-dropdown-container {
+  width: 250px;
+  padding: 15px;
+
+  .form-group {
+    margin-bottom: 10px;
+  }
+
+  .checkbox {
+    margin-top: 6px;
+    margin-bottom: 6px;
+  }
+
+  p {
+    margin: 0;
+  }
+
+  .footer-link > a {
+    font-size: 12px;
+  }
+
+  .btn-block + .btn-block {
+    margin-top: 10px;
+  }
 }
