--- a/src/Adstacy/UserBundle/Resources/views/Resetting/checkEmail.html.twig
+++ b/src/Adstacy/UserBundle/Resources/views/Resetting/checkEmail.html.twig
@@ -1,5 +1,16 @@
 {% extends 'AdstacyAppBundle::layout.html.twig' %}
 
+{% block stylesheets %}
+  {{ parent() }}
+  {% stylesheets filter='cssrewrite, uglifycss'
+    'bundles/adstacyapp/less/layout/reset.less'
+  %}
+    <link href="{{ asset_url }}" type="text/css" rel="stylesheet">
+  {% endstylesheets %}
+{% endblock %}
+
+{% endblock %}
+
 {% trans_default_domain 'FOSUserBundle' %}
 
 {% block content %}
