--- a/src/Adstacy/UserBundle/Resources/views/Resetting/passwordAlreadyRequested.html.twig
+++ b/src/Adstacy/UserBundle/Resources/views/Resetting/passwordAlreadyRequested.html.twig
@@ -2,6 +2,15 @@
 
 {% trans_default_domain 'FOSUserBundle' %}
 
+{% block stylesheets %}
+  {{ parent() }}
+  {% stylesheets filter='cssrewrite, uglifycss'
+    'bundles/adstacyapp/less/layout/reset.less'
+  %}
+    <link href="{{ asset_url }}" type="text/css" rel="stylesheet">
+  {% endstylesheets %}
+{% endblock %}
+
 {% block content %}
   <div class="jumbotron text-center">
     <p class="lead">{{ 'resetting.password_already_requested'|trans }}</p>
