--- a/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
@@ -17,12 +17,14 @@
   .user-ads {
     float: right;
     width: 105px;
-    img {
-      border: 1px solid #dfdfdf;
-      border-radius: 3px;
-      display: inline-block;
-      margin-bottom: 5px;
-    }
+  }
+  
+  .user-mini-ad {
+    float: left;
+    width: 47px;
+    height: 50px;
+    margin: 0 5px 5px 0;
+    background-color: #ccc;
   }
 
   .user-realname {
